<resources>
    <string name="app_name">Track Attendance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_student">Add Student</string>
    <string name="subject_name">Subject Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete_subject">Delete the subject</string>
    <string name="delete">DELETE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="delete_student">Are you sure you want to delete</string>
    <string name="rollno">Roll No.</string>
    <string name="studentProfile">Student\'s Profile</string>
    <string name="mobileNo">Mobile No.</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="delete_message">Are you sure you want to delete this subject ?</string>
    <string name="update">UPDATE</string>
    <string name="submit">SUBMIT</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="attendanceCriteria">Attendance Criteria</string>
    <string name="preference_file_key">com.example.trackattendance</string>
    <string name="criteria_value">criteria_value</string>
    <string name="past_attendance">Past Attendance</string>
    <string name="students_record">Students Record</string>
    <string name="search">Search</string>
    <string name="send_sms">Send SMS</string>
    <string name="typeMsg">Type a message</string>
    <string name="send">Send</string>
    <string name="total_classes">Total Classes</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="update_menu">Update</string>
    <string name="delete_menu">Delete</string>
</resources>