<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StudentUpdate">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/student_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:src="@drawable/add_student"
        app:civ_border_width="1dp"
        android:tag="unset"
        app:civ_border_color="#FF000000"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName_TextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_profile_image"
        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:textSize="20sp"
            android:drawablePadding="10dp"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName_TextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_TextField"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:inputType="textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rollno_TextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_TextField"
        android:hint="@string/rollno">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rollno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateOfBirth_TextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollno_TextField"
        android:hint="@string/dateOfBirth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/date_of_birth"
            android:textSize="20sp"
            android:maxLength="10"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_TextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth_TextField"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/email"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNo_TextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_TextField"
        android:hint="@string/mobileNo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/call"
            android:textSize="20sp"
            android:maxLength="10"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/cancel"
        android:id="@+id/cancel"
        app:cornerRadius="18dp"
        app:strokeColor="@color/ripple_color"
        app:rippleColor="@color/background"
        android:textColor="@color/ripple_color"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textStyle="bold"
        android:layout_marginTop="13dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@+id/mobileNo_TextField"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:text="@string/update"
        android:id="@+id/update"
        app:cornerRadius="18dp"
        app:strokeColor="@color/background"
        app:rippleColor="@color/ripple_color"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textStyle="bold"
        android:layout_marginTop="13dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
       android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNo_TextField"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>