<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ConfirmDeleteStudent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_fragment_background">
    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/delete_icon"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/delete_dialog_box_icon"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@+id/delete_icon"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/delete_title"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:textSize="25sp"
    android:text="@string/delete"
    android:layout_marginTop="15dp"
  android:layout_marginStart="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_icon"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/delete_message"
        android:layout_marginEnd="15dp"
       android:text="@string/delete_student"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"/>
    <com.google.android.material.button.MaterialButton
        android:text="@string/cancel"
        android:id="@+id/cancel"
        app:cornerRadius="18dp"
        app:strokeColor="@color/background"
        app:rippleColor="@color/ripple_color"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/delete_message"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <com.google.android.material.button.MaterialButton
        android:text="@string/delete"
        android:id="@+id/delete"
        app:cornerRadius="18dp"
        app:strokeColor="@color/ripple_color"
        app:rippleColor="@color/background"
        android:textColor="@color/ripple_color"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_message"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>