<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:textStyle="bold"
    app:layout_constraintEnd_toStartOf="@+id/individual_percentage"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="15dp"
    android:id="@+id/individual_subject"
    android:textColor="@color/black"
   android:layout_marginTop="5dp"
    android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:id="@+id/individual_percentage"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        />
        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/individual_subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cpb_background_progressbar_width="6dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_width="18dp"
            app:cpb_round_border="false"
            app:cpb_progressbar_color_direction="left_to_right"
            app:cpb_progress_max="100"
            android:layout_margin="10dp"
            app:cpb_indeterminate_mode="false"
            />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:text="@string/total_classes"
       android:textStyle="bold"
      android:textSize="15sp"
      android:id="@+id/total_classes"
      app:layout_constraintTop_toBottomOf="@+id/individual_subject"
      android:layout_marginStart="10dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/progress_bar"
      android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
             android:textStyle="bold"
            android:text="@string/present"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/progress_bar"
            android:id="@+id/present_classes"
            app:layout_constraintTop_toBottomOf="@+id/total_classes"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/absent"
            app:layout_constraintEnd_toStartOf="@+id/progress_bar"
            android:id="@+id/absent_classes"
            app:layout_constraintTop_toBottomOf="@+id/present_classes"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>